--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,10 @@
 CXX = g++
 CFLAGS = -O3
 
-circle-fft-file: circle-fft-file.o fft.o
+circle-fft-file: circle-fft-file.o fft2d.o
 
-circle-fft-file: simulation-fft.hpp
+circle-fft-file.o: simulation-fft.hpp
+
+fft-eigen: fft-eigen.h
 
 fft.o: fft.hpp
